--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;URL=/employees/list">
+    <meta http-equiv="refresh" content="0;URL=/employees/home">
     <title>redirecting  </title>
 </head>
 <body>
-<p> If you are not redirected, <a href="/employees/list"> Click Here </a></p>
+<p> If you are not redirected, <a href="/employees/home"> Click Here </a></p>
 
 </body>
 </html>
